--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
-# Byte-compiled / optimized / DLL files
+
+
+*.log
+*.pot
+*.pyc
 __pycache__/
+local_settings.py
+
 *.py[cod]
 *$py.class
 
-# C extensions
 *.so
 
-# Distribution / packaging
+
 .Python
 build/
 develop-eggs/
@@ -20,24 +25,21 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
-# Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
 htmlcov/
 .tox/
+.nox/
 .coverage
 .coverage.*
 .cache
@@ -47,58 +49,49 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 
-# Translations
 *.mo
-*.pot
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-
-# Flask stuff:
 instance/
 .webassets-cache
 
-# Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
 docs/_build/
 
-# PyBuilder
 target/
 
-# Jupyter Notebook
 .ipynb_checkpoints
 
-# pyenv
+profile_default/
+ipython_config.py
+
 .python-version
 
-# celery beat schedule file
 celerybeat-schedule
 
-# SageMath parsed files
 *.sage.py
 
-# Environments
 .env
 .venv
+venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
 .spyderproject
 .spyproject
 
-# Rope project settings
 .ropeproject
 
-# mkdocs documentation
 /site
-
-# mypy
 .mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+
+/static
+
+db.sqlite3
+/media
